# libpstretch

./: CMakeLists.txt  Dockerfile  README.md
lib/: CMakeLists.txt
lib/include/: audiobuffer.h  audiostream.h  fft.h  pstretch.h  rawaudio.h  sample.h  stretch.h  wavefile.h
lib/src/: audiobuffer.c  audiostream.c  fft.c  rawaudio.c  stretch.c  wavefile.c
main/: CMakeLists.txt  wavstretch.c
main/include/: audiofile.h  ogg_encoder.h  oggencode.h
main/src/: audiofile.c  ogg_encoder.c  oggencode.c
stretcher/: CMakeLists.txt  wavstretch.c
stretcher/src/: wavefile.c
tests/: CMakeLists.txt
tests/src/: test_audio_stream.c  test_audiobuffer.c  test_fft.c  test_full_algorithm.c  test_rawaudio.c  test_stretch.c
